(rule
 (deps 
   ../src/lux.wasm 
   ../walloc/walloc.wasm 
   ../fonts/departure/departure.json
   ../fonts/vcr_osd_mono/vcr_osd_mono.json
   ../fonts/runescape/runescape.json
   ../fonts/runescape/runescape_bold.json)
 (targets lux.wasm walloc.wasm departure.json vcr_osd_mono.json runescape.json runescape_bold.json)
 (mode promote)
 (action
  (progn
   (copy ../src/lux.wasm lux.wasm)
   (copy ../walloc/walloc.wasm walloc.wasm)
   (copy ../fonts/departure/departure.json departure.json)
   (copy ../fonts/vcr_osd_mono/vcr_osd_mono.json vcr_osd_mono.json)
   (copy ../fonts/runescape/runescape.json runescape.json)
   (copy ../fonts/runescape/runescape_bold.json runescape_bold.json))))
