(rule
 (deps
  (source_tree ../binaryen)
  (source_tree ./))
 (target lux.merged.wat)
 (action
  (bash "cpp lux.wat | sed 's/^#/;; #/' > %{target}")))

(rule
 (deps
  (source_tree ../binaryen)
  lux.merged.wat)
 (target lux.raw.wasm)
 (action
  (run
   ../binaryen/bin/wasm-as
   lux.merged.wat
   --enable-simd
   --enable-multivalue
   --enable-bulk-memory
   --debuginfo
   --source-map
   lux.wasm.map
   --source-map-url
   ./lux.wasm.map
   -o %{target})))

;  (rule
;   (deps  (source_tree ../binaryen) lux.raw.wasm)
;   (target lux.wasm)
;   (action
;    (bash "../binaryen/bin/wasm-opt ./lux.raw.wasm --enable-simd --enable-bulk-memory --enable-multivalue -O4 -o %{target}")))

(rule
 (deps  lux.raw.wasm)
 (target lux.wasm)
 (action
  (copy lux.raw.wasm lux.wasm)))
