(rule
 (deps
  (source_tree ../binaryen)
  (source_tree ./))
 (target lux.merged.wat)
 (action
  (setenv DEBUG 0
  (setenv CARE_ABOUT_ALIGNMENT 0
   (bash "cpp -DDEBUG=$DEBUG -DCARE_ABOUT_ALIGNMENT=$CARE_ABOUT_ALIGNMENT lux.wat | sed 's/^#/;; #/' > %{target}")))))

(rule
 (deps
  (source_tree ../binaryen)
  lux.merged.wat)
 (targets lux.raw.wasm lux.raw.wasm.map)
 (action
  (run
    ../binaryen/bin/wasm-as
    lux.merged.wat
    --enable-simd
    --enable-multivalue
    --enable-bulk-memory
    --debuginfo
    --source-map
    lux.raw.wasm.map
    --source-map-url
    ./lux.wasm.map
    -o ./lux.raw.wasm)))

; (rule
;  (deps  (source_tree ../binaryen) lux.raw.wasm)
;  (targets lux.wasm lux.wasm.map)
;  (action
;   (run 
;     ../binaryen/bin/wasm-opt 
;     ./lux.raw.wasm 
;     --enable-simd --enable-bulk-memory --enable-multivalue 
;     -O4 
;     --input-source-map lux.raw.wasm.map
;     --output-source-map lux.wasm.map
;     -o lux.wasm)))

(rule
 (deps  lux.raw.wasm lux.raw.wasm.map)
 (targets lux.wasm lux.wasm.map)
 (action
  (progn
   (copy lux.raw.wasm lux.wasm)
   (copy lux.raw.wasm.map lux.wasm.map))))
