; (rule
;  (deps walloc.c)
;  (target walloc.o)
;  (action
;   (bash "PATH=\"/opt/homebrew/opt/llvm/bin:$PATH\" clang %{deps} -DNDEBUG -Oz --target=wasm32 -nostdlib -c -o %{target}")))
; 
; (rule
;  (deps walloc.o)
;  (target walloc.wasm)
;  (mode promote)
;  (action
;   (bash "PATH=\"/opt/homebrew/opt/llvm/bin:$PATH\" wasm-ld %{deps} --export=malloc --export=free --no-entry --export-memory -o %{target}")))

(rule
 (deps
  (source_tree ../binaryen)
  walloc.wat)
 (targets walloc.wasm)
 (action
  (run ../binaryen/bin/wasm-as walloc.wat -o walloc.wasm)))
